Replace org:immutables with JDK records (#209)
* Replace org:immutables with JDK records

* Preserve libraries order to improve reproducibility